# my-rag

./: .env.example  .gitignore  .todo  README.md  SPEC.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  run_app.bat  test_rerank.py
data/: ._sample_document.txt  roles.json  sample_document.txt
src/: __init__.py  auth.py  cli_conversation.py  config.py  conversation_manager.py  document_loader.py  embedding.py  llm.py  permission.py  query_rewriter.py  rag_pipeline.py  retrieval.py  user_manager.py  vector_store.py
src/vector_db/: __init__.py  base.py  bm25_retriever.py  faiss_db.py  hybrid_retriever.py  memory_db.py
tests/: eval_result.txt  eval_to_file.py  evaluate_rag.py  evaluation_results.json  evaluation_results.txt  simple_eval.py  test_bge_reranker.py  test_bm25_dedup.py  test_conversation.py  test_dataset.py  test_env.py  test_faiss.py  test_permission_filter.py  test_print.py  test_qwen3_reranker.py  test_rag_pipeline_metadata.py  test_retrieval.py  test_vector_db.py  verify_test_data.py
