[project]
name = "learn"
version = "0.9.0"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.12.2",
    "faiss-cpu>=1.8.0",
]
